--- a/assets/styles/sass/2-layouts/_portfolio.sass
+++ b/assets/styles/sass/2-layouts/_portfolio.sass
@@ -1,10 +1,14 @@
 /*__PORTFOLIO SECTION__*/
 
 .portfolio
- 
-  .col-lg-6,
-  .col-md-6
+  
+  .container-fluid,
+  .col-md-6,
+  .col-md-12
     padding: 0
+
+  .row
+    margin: 0
     
   .images-container,
   .overlay
@@ -13,8 +17,9 @@
   .images-container.long,
   .overlay.long
     +dimensions( 480px, 780px )
-    
-  img
+
+
+  img    
     width: 100%
     height: 100%
 
@@ -24,6 +29,8 @@
       top: 0
       left: 0
 
+
+/*___Project Overlay Styling___*/
   
 .project-details
   text-align: center
